2010-01-03 German Arias <german@xelalug.org>

	* Source/NSPageLayout.m: Added missing internationalisation.
	* Resources/Spanish.lproj/Localizable.strings: More strings in spanish.

2010-01-03 German Arias <german@xelalug.org>

	* Source/NSFontPanel.m: Added missing internationalisation.
	* Resources/Spanish.lproj/Localizable.strings: More strings in spanish.

2010-01-03 German Arias <german@xelalug.org>

	* Resources/Spanish.lproj/Localizable.strings: More strings in spanish.

2010-01-02 German Arias <german@xelalug.org>

	* Source/NSOpenPanel.m: Reverted some previous changes, added GSGuiPrivate.h.
	* Source/NSColorPanel.m: Added GSGuiPrivate.h.
	* Source/NSDocument.m: Added missing internationalisation.
	* Resources/Spanish.lproj/Localizable.strings: More strings on spanish.

2010-01-02 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSColorPanel.m,
	* Source/NSOpenPanel.m,
	* Source/NSSavePanel.m: Add missing internationalisation.

2009-12-31 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSShadow.m, Headers/AppKit/NSShadow.h:
	Added NSShadow implementation; doesn't actually draw anything yet.

2009-12-31 German Arias <german@xelalug.org>

	* ColorPickers/Spanish.lproj/StandardPicker.strings,
	* Resources/Spanish.lproj/Localizable.strings: Fixed incorrect characters.

2009-12-31 German Arias <german@xelalug.org>

	*  Resources/Spanish.lproj/Localizable.strings: Added.
	*  Resources/GNUmakefile: Added Spanish language.

2009-12-30 German Arias <german@xelalug.org>

	*  Panels/Spanish.lproj/GSDataLinkPanel.gorm,
	*  Panels/Spanish.lproj/GSPageLayout.gorm,
	*  Panels/Spanish.lproj/GSToolbarCustomizationPalette.gorm,
	*  Panels/Spanish.lproj/GSPrintPanel.gorm,
	*  Panels/Spanish.lproj/GSSpellPanel.gorm: Added.
	*  Panels/GNUmakefile: Added Spanish language.

2009-12-30 German Arias <german@xelalug.org>

	* ColorPickers/Spanish.lproj/StandardPicker.strings: Added.

2009-12-29 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSImageView.h: Clean up.